--- a/example.conf
+++ b/example.conf
@@ -1,13 +1,13 @@
 #default configure
-#Update Date: 2021.10.13 22:06:05 +0000
+#Update Date: 2021.02.19 22:34:05 +0000
 #author: Loon
 
 [General]
 skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,e.crashlynatics.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-# [DNS] => DNS server
+# DNS server
 dns-server = system,119.29.29.29,223.5.5.5
-# doh server, only for Wireformat
+# Doh server, only for Wireformat
 doh-server = https://example.com/dns-query
 allow-udp-proxy = false
 allow-wifi-access = true
@@ -15,7 +15,9 @@ wifi-access-http-port = 7222
 wifi-access-socket5-port = 7221
 proxy-test-url = http://www.qualcomm.cn/generate_204
 test-timeout = 3
-
+resource-parser = http://www.example.com/parser.js
+ssid-trigger = SSID-DIRECT
+real-ip = *.apple.com, *apple.com
 
 [Proxy]
 # 内置 DIRECT、REJECT 策略
@@ -102,7 +104,7 @@ FINAL,Final
 # PROXY
 https://raw.githubusercontent.com/Loon0x00/LoonExampleConfig/master/Rule/ExampleRule.list,policy=PROXY,enabled=true
 
-[URL Rewrite]
+[Rewrite]
 enable = true
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn https://www.google.com 302
@@ -112,18 +114,30 @@ enable = true
 # 订阅url,别名(可选)
 https://raw.githubusercontent.com/Loon0x00/LoonExampleConfig/master/Rewrite/AutoRewrite_Example.list,tag=auto,enable=true
 
+[Host]
+#可以指定一下四种模式：
+# 1、指定域名使用对应的IP地址
+# 2、将域名指向另一个域名
+# 3、指定域名请求DNS时使用特定的DNS服务器，格式为：google.com = server:8.8.8.8 或者 *.baidu.com = server:https://example.com/dns-query
+# 4、指定具体的SSID环境下使用特定的DNS服务器
+*.testflight.apple.com = server:8.8.4.4
+ssid:LOON's WIFI = server:system
+
 [Script]
 enable = true
 # http-request 处理请求的脚本
 # http-response 处理请求响应的脚本
 # cron 定时脚本
 # network-changed   网络发生变化触发脚本
+# generic  通用型脚本，可用在操作节点/策略组中，执行是会带入节点名称和策略组名称，脚本必须在开启NE时
 
 # http-request ^https?:\/\/(www.)?(example)\.com script-path=localscript.js,tag = requestScript,enable=true
 # http-response ^https?:\/\/(www.)?(example)\.com script-path=https://example.com/loon.js,timeout=10,requires-body = true,tag = responseScript,enable=true
 # cron "0 8 * * *" script-path=cron.js,tag = responseScript,enable=true
 
 network-changed script-path=https://raw.githubusercontent.com/Loon0x00/LoonExampleConfig/master/Script/netChanged.js, tag=changeModel,enable=true
+
+generic script-path=https://raw.githubusercontent.com/Loon0x00/LoonExampleConfig/master/Script/generic_example.js,tag=GeoLocation,timeout=10,img-url=location.fill.viewfinder.system
 
 [Remote Script]
 # https://example.com/loon.js, tag=scripts, enable=true
@@ -136,6 +150,6 @@ network-changed script-path=https://raw.githubusercontent.com/Loon0x00/LoonExamp
 [MITM]
 hostname = *.example.com,*.sample.com
 enable = true
-可以到配置文件skip-server-cert-verify
+skip-server-cert-verify = true
 #ca-p12 =
 #ca-passphrase =
