resource parser example

--- a/example.conf
+++ b/example.conf
@@ -121,7 +121,7 @@ https://raw.githubusercontent.com/Loon0x00/LoonExampleConfig/master/Rewrite/Auto
 # 3、指定域名请求DNS时使用特定的DNS服务器，格式为：google.com = server:8.8.8.8 或者 *.baidu.com = server:https://example.com/dns-query
 # 4、指定具体的SSID环境下使用特定的DNS服务器
 *.testflight.apple.com = server:8.8.4.4
-ssid:LOON's WIFI = server:system
+ssid:LOON WIFI = server:system
 
 [Script]
 enable = true
